# sub-registrar

./: .gitignore  README.md
example/: .env.example  LICENSE  README.md  package-lock.json  package.json
example/src/app/: globals.css  layout.tsx  page.tsx
example/src/components/icons/: ExternalLink.tsx
example/src/utils/: string.ts
js/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
js/src/: bindings.ts  raw_instructions.ts  secondary_bindings.ts  utils.ts
js/src/state/: index.ts  mint-record.ts  registrar.ts  subrecord.ts  tag.ts
js/tests/: end_to_end.test.ts  utils.ts
program/: Cargo.toml  Dockerfile  build.sh
program/src/: cpi.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  revoke_unchecked.rs  state.rs  utils.rs
program/src/processor/: admin_register.rs  admin_revoke.rs  close_registrar.rs  close_registry.rs  create_registrar.rs  create_registry.rs  delete_subdomain_record.rs  delete_subrecord.rs  edit_registrar.rs  edit_registry.rs  nft_owner_revoke.rs  register.rs  unregister.rs
program/src/processor/revoke/: admin_revoke.rs  mod.rs  nft_owner_revoke.rs  revoke_unchecked.rs
program/src/state/: mint_record.rs  nft_mint_record.rs  registry.rs  schedule.rs  subdomain_record.rs  subrecord.rs
program/tests/: errors.rs  functional.rs  revoke.rs  state.rs
program/tests/common/: metadata.rs  mod.rs  utils.rs
sub-registrar-ui/: .gitignore  package-lock.json  package.json  tailwind.config.js
sub-registrar-ui/src/pages/: _app.tsx  _document.tsx  index.tsx
sub-registrar-ui/src/styles/: globals.css
(+24 files in other folders)
