[package]
name = "sub-register"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.16.16"
num_enum = "0.5.4"
borsh = "0.10.3"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
spl-token = { version="4.0.0", features= ["no-entrypoint"] }
bonfida-utils = "0.4.2"
spl-associated-token-account = {version = "2.2.0", features = ["no-entrypoint"]}
spl-name-service = { version = "0.3.0", features = ["no-entrypoint"] }
bytemuck = "1.12.3"
unicode-segmentation = "1.10.1"
sns-registrar = {git = "ssh://git@github.com/Bonfida/sns-registrar.git", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "4.0.0" }



[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.16.16"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.16.16"
tokio = {version="1.6", features = ["macros"]}
random-string = "1.0.0"


[lib]
crate-type = ["cdylib", "lib"]
